--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
-    "start": "node src/practice.js",
+    "start": "node src/blogful.js",
     "deploy": "git push heroku master",
     "predeploy": "npm audit"
   },
